@@ -31,8 +31,7 @@ extern boolean constructors_sorted;
 
 /* We keep a list of these structures for each set we build.  */
 
-struct set_info
-{
+struct set_info {
   struct set_info *next;		/* Next set.  */
   struct bfd_link_hash_entry *h;	/* Hash table entry.  */
   bfd_reloc_code_real_type reloc;	/* Reloc to use for an entry.  */
@@ -40,8 +39,7 @@ struct set_info
   struct set_element *elements;		/* Elements in set.  */
 };
 
-struct set_element
-{
+struct set_element {
   struct set_element *next;		/* Next element.  */
   const char *name;			/* Name in set (may be NULL).  */
   asection *section;			/* Section of value in set.  */
