@@ -23,15 +23,13 @@
 #define LDEXP_H
 
 /* The result of an expression tree */
-typedef struct
-{
+typedef struct {
   bfd_vma value;
   struct lang_output_section_statement_struct *section;
   boolean valid_p;
 } etree_value_type;
 
-typedef struct
-{
+typedef struct {
   int node_code;
   enum { etree_binary,
 	   etree_trinary,
@@ -46,8 +44,7 @@ typedef struct
 	   etree_rel } node_class;
 } node_type;
 
-typedef union etree_union
-{
+typedef union etree_union {
   node_type type;
   struct {
     node_type type;
@@ -68,11 +65,11 @@ typedef union etree_union
 
   struct {
     node_type type;
-    union   etree_union *child;
+    union etree_union *child;
   } unary;
   struct {
     node_type type;
-   CONST char *name;
+    CONST char *name;
   } name;
   struct {
     node_type type;
@@ -106,7 +103,7 @@ etree_type *exp_provide PARAMS ((const char *, etree_type *));
 etree_type *exp_assert PARAMS ((etree_type *, const char *));
 void exp_print_tree PARAMS ((etree_type *));
 bfd_vma exp_get_vma PARAMS ((etree_type *, bfd_vma, char *, lang_phase_type));
-int exp_get_value_int PARAMS ((etree_type *, int, char *,lang_phase_type));
-bfd_vma exp_get_abs_int PARAMS ((etree_type *, int, char *,lang_phase_type));
+int exp_get_value_int PARAMS ((etree_type *, int, char *, lang_phase_type));
+bfd_vma exp_get_abs_int PARAMS ((etree_type *, int, char *, lang_phase_type));
 
 #endif
